syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

import "general.proto";

message CreateColorRequest {
    string store_id = 1;
    string name = 2;
    string value = 3;
}

message CreateColorResponse {
    Color color = 1;
}

message GetColorRequest {
    string id = 1;
}

message GetColorResponse {
    Color color = 1;
}

message GetColorsRequest {
    string store_id = 1;
}

message GetColorsResponse {
    repeated Color colors = 1;
}

message UpdateColorRequest {
    string id = 1;
    string name = 2;
    string value = 3;
}

message UpdateColorResponse {
   string message = 1;
}

message DeleteColorRequest {
    string id = 1;
}

message DeleteColorResponse {
    string message = 1;
}