syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

import "general.proto";

message CreateSizeRequest {
    int64 store_id = 1;
    string name = 3;
    string value = 4;
}

message CreateSizeResponse {
    Size size = 1;
}

message GetSizeRequest {
    int64 id = 1;
}

message GetSizeResponse {
    Size size = 1;
}

message GetSizesRequest {
    int64 store_id = 1;
}

message GetSizesResponse {
    repeated Size sizes = 1;
}

message UpdateSizeRequest {
    int64 id = 1;
    int64 store_id = 2;
    string name = 3;
    string value = 4;
}

message UpdateSizeResponse {
   string message = 1;
}

message DeleteSizeRequest {
    int64 id = 1;
}

message DeleteSizeResponse {
    string message = 1;
}